<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_large">

    <TextView
        android:id="@+id/player_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/efootball_bold"
        android:text="@string/player_details_title"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_xlarge"
        app:layout_constraintBottom_toTopOf="@id/player_name_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/player_name_lbl"
        style="@style/BaseLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_player_name"
        app:layout_constraintBottom_toTopOf="@id/input_player_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_details" />

    <EditText
        android:id="@+id/input_player_name"
        style="@style/MyCustomInputBoxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:hint="@string/hint_player_name"
        android:inputType="textCapWords"
        android:maxLength="30"
        app:layout_constraintBottom_toTopOf="@+id/rating_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_name_lbl" />

    <TextView
        android:id="@+id/rating_lbl"
        style="@style/BaseLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_rating"
        app:layout_constraintBottom_toTopOf="@+id/input_rating"
        app:layout_constraintEnd_toStartOf="@id/position_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_player_name"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/input_rating"
        style="@style/MyCustomInputBoxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:hint="@string/hint_player_rating"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toTopOf="@+id/country_club_lbl"
        app:layout_constraintEnd_toStartOf="@+id/position_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_lbl" />

    <TextView
        android:id="@+id/position_lbl"
        style="@style/BaseLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:text="@string/label_position"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rating_lbl"
        app:layout_constraintTop_toTopOf="@id/rating_lbl" />

    <TextView
        android:id="@+id/position_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@drawable/spinner_background"
        android:fontFamily="@font/efootball_regular"
        android:gravity="center_vertical"
        android:minHeight="@dimen/input_field_height"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:text="@string/hint_select_position"
        android:textColor="?android:attr/textColorHint"
        app:drawableEndCompat="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toBottomOf="@id/input_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_rating"
        app:layout_constraintTop_toTopOf="@id/input_rating" />

    <TextView
        android:id="@+id/country_club_lbl"
        style="@style/BaseLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_add_logo"
        app:layout_constraintBottom_toTopOf="@+id/country_club_spinner"
        app:layout_constraintEnd_toStartOf="@id/upload_logo_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_rating"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/country_club_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@drawable/spinner_background"
        android:fontFamily="@font/efootball_regular"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:minHeight="@dimen/input_field_height"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:text="@string/card_editor_select_country"
        android:textColor="?android:attr/textColorHint"
        android:textSize="@dimen/font_size_large"
        app:drawableEndCompat="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toTopOf="@+id/upload_img_lbl"
        app:layout_constraintEnd_toStartOf="@+id/btn_upload_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_club_lbl" />

    <TextView
        android:id="@+id/upload_logo_lbl"
        style="@style/BaseLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:text="@string/label_upload_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/country_club_spinner"
        app:layout_constraintTop_toTopOf="@id/country_club_lbl" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload_logo"
        style="@style/MyCustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:fontFamily="@font/efootball_regular"
        android:padding="@dimen/padding_medium"
        android:text="@string/btn_add_manually"
        android:textColor="@color/button_text_dark"
        app:icon="@drawable/ic_upload"
        app:iconGravity="textStart"
        app:iconTint="@color/button_text_dark"
        app:layout_constraintBottom_toBottomOf="@id/country_club_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/country_club_spinner"
        app:layout_constraintTop_toTopOf="@id/country_club_spinner" />

    <TextView
        android:id="@+id/upload_img_lbl"
        style="@style/BaseLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_upload_image"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_player_image_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_club_spinner"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_player_image_2"
        style="@style/MyCustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:fontFamily="@font/efootball_regular"
        android:minHeight="@dimen/input_field_height"
        android:padding="@dimen/padding_medium"
        android:singleLine="true"
        android:text="@string/btn_potw_image"
        app:autoSizeMaxTextSize="@dimen/font_size_medium"
        app:autoSizeMinTextSize="@dimen/font_size_min_autosize"
        app:autoSizeStepGranularity="@dimen/font_size_step_granularity"
        app:autoSizeTextType="uniform"
        app:icon="@drawable/ic_upload"
        app:iconGravity="textStart"
        app:iconTint="@color/button_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/btn_toggle_eraser"
        app:layout_constraintEnd_toStartOf="@id/btn_add_player_image_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_img_lbl" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_player_image_1"
        style="@style/MyCustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_small"
        android:fontFamily="@font/efootball_regular"
        android:padding="@dimen/padding_medium"
        android:singleLine="true"
        android:text="@string/btn_potw_image"
        app:autoSizeMaxTextSize="@dimen/font_size_medium"
        app:autoSizeMinTextSize="@dimen/font_size_min_autosize"
        app:autoSizeStepGranularity="@dimen/font_size_step_granularity"
        app:autoSizeTextType="uniform"
        app:icon="@drawable/ic_upload"
        app:iconGravity="textStart"
        app:iconTint="@color/button_text_dark"
        app:layout_constraintBottom_toBottomOf="@id/btn_add_player_image_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_add_player_image_2"
        app:layout_constraintTop_toTopOf="@id/btn_add_player_image_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_toggle_eraser"
        style="@style/MyCustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:fontFamily="@font/efootball_regular"
        android:minWidth="@dimen/card_editor_eraser_btn_min_width"
        android:minHeight="@dimen/input_field_height"
        android:text="@string/card_editor_btn_eraser"
        app:icon="@drawable/ic_eraser"
        app:iconGravity="textStart"
        app:iconTint="@color/button_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/eraser_size_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_player_image_2" />

    <ImageButton
        android:id="@+id/btn_undo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/card_editor_cd_undo"
        android:enabled="false"
        android:paddingHorizontal="@dimen/margin_small"
        android:src="@drawable/ic_undo"
        app:layout_constraintBottom_toBottomOf="@id/btn_toggle_eraser"
        app:layout_constraintEnd_toStartOf="@id/btn_toggle_eraser"
        app:layout_constraintTop_toTopOf="@id/btn_toggle_eraser" />

    <ImageButton
        android:id="@+id/btn_redo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_large"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/card_editor_cd_redo"
        android:enabled="false"
        android:paddingHorizontal="@dimen/margin_small"
        android:src="@drawable/ic_redo"
        app:layout_constraintBottom_toBottomOf="@id/btn_toggle_eraser"
        app:layout_constraintStart_toEndOf="@id/btn_toggle_eraser"
        app:layout_constraintTop_toTopOf="@id/btn_toggle_eraser" />
    <TextView
        android:id="@+id/eraser_size_lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BaseLabelStyle"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/card_editor_label_eraser_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_toggle_eraser"
        tools:visibility="visible" />

    <com.google.android.material.slider.Slider
        android:id="@+id/eraser_size_slider"
        style="@style/MyCustomInputBoxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:stepSize="1"
        android:value="20"
        android:valueFrom="1"
        android:valueTo="100"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eraser_size_lbl"
        app:trackColorActive="@color/slider_orange"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/eraserHardnessLbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        style="@style/BaseLabelStyle"
        android:gravity="center"
        android:text="@string/card_editor_label_hardness"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eraser_size_slider"
        tools:visibility="visible" />

    <com.google.android.material.slider.Slider
        android:id="@+id/eraserHardnessSlider"
        style="@style/MyCustomInputBoxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:stepSize="1.0"
        android:value="100.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eraserHardnessLbl"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/image_size_lbl"
        style="@style/BaseLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/card_editor_label_image_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eraserHardnessSlider"
        tools:visibility="visible" />

    <com.google.android.material.slider.Slider
        android:id="@+id/image_size_slider"
        style="@style/MyCustomInputBoxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:stepSize="1"
        android:value="100"
        android:valueFrom="10"
        android:valueTo="600"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_size_lbl"
        app:trackColorActive="@color/slider_orange"
        tools:visibility="visible" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_small"
        android:fontFamily="@font/efootball_regular"
        android:maxLines="1"
        android:minHeight="@dimen/min_btn_height"
        android:singleLine="true"
        android:text="@string/btn_reset_card"
        android:textColor="@color/button_reset_text"
        app:autoSizeMaxTextSize="@dimen/font_size_medium"
        app:autoSizeMinTextSize="@dimen/font_size_small_autosize"
        app:autoSizeStepGranularity="@dimen/font_size_step_granularity"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@color/button_reset_bg"
        app:cornerRadius="@dimen/card_editor_button_corner_radius"
        app:icon="@drawable/ic_reset"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toStartOf="@id/btn_download_card"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_size_slider" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_download_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:fontFamily="@font/efootball_regular"
        android:maxLines="1"
        android:minHeight="@dimen/min_btn_height"
        android:singleLine="true"
        android:text="@string/btn_download"
        android:textColor="@color/button_reset_text"
        app:autoSizeMaxTextSize="@dimen/font_size_medium"
        app:autoSizeMinTextSize="@dimen/font_size_small_autosize"
        app:autoSizeStepGranularity="@dimen/font_size_step_granularity"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@color/button_download_bg"
        app:cornerRadius="@dimen/card_editor_button_corner_radius"
        app:icon="@drawable/ic_down"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/btn_reset_card"
        app:layout_constraintTop_toBottomOf="@id/image_size_slider" />
</androidx.constraintlayout.widget.ConstraintLayout>
