<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="24sp"
        android:fontFamily="@font/efootball_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_newEpic"
        style="@style/LeftCardStyle"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/card_epic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <ImageView
            android:id="@+id/img_epic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/new_epic_card"
            android:contentDescription="@string/new_epic_image" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_epic"
        style="@style/RightCardStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_newEpic"
        app:layout_constraintTop_toTopOf="@+id/card_newEpic">

        <ImageView
            android:id="@+id/img_potw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/epic"
            android:contentDescription="@string/epic_image" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_potw"
        style="@style/LeftCardStyle"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/card_newEpic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card_potw2">

        <ImageView
            android:id="@+id/img_new_epic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/potw"
            android:contentDescription="@string/potw_image" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_potw2"
        style="@style/RightCardStyle"
        app:layout_constraintTop_toTopOf="@+id/card_potw"
        app:layout_constraintStart_toEndOf="@+id/card_potw"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_new_potw2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/potw"
            android:contentDescription="@string/potw_image" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
